--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "16.8.6",
@@ -19,6 +20,7 @@
     "@babel/runtime": "^7.5.0",
     "@react-native-community/eslint-config": "^0.0.3",
     "babel-jest": "^24.1.0",
+    "eslint": "^7.24.0",
     "jest": "^24.1.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.6"
